crates/reinhardt-core/crates/macros/tests/ui/field_attributes/fail/generated_with_default.stderr
error: Generated columns cannot have default values
 --> tests/ui/field_attributes/fail/generated_with_default.rs:3:1
  |
3 | #[model(app_label = "test", table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `reinhardt::Model` (in Nightly builds, run with -Z macro-backtrace for more info)
